package br.com.primeshoes.api.enums;

public enum Role {
	SELLER, BUYER
}
